@@ -44,7 +44,9 @@ GNU coreutils NEWS                                    -*- outline -*-
 
   [These dd bugs were present in "the beginning".]
 
-  df now correctly elides duplicates for virtual file systems like tmpfs.
+  df now elides duplicates for virtual file systems like tmpfs, and will
+  display the correct device name for directories mounted multiple times.
+  [These bugs were present in "the beginning".]
 
   head --bytes=-N and --lines=-N now handles devices more
   consistently, not ignoring data from virtual devices like /dev/zero,
